--- a/OrderPlus/OrderPlus.Fronend/Layout/NavMenu.razor
+++ b/OrderPlus/OrderPlus.Fronend/Layout/NavMenu.razor
@@ -1,9 +1,26 @@
 ﻿<MudNavMenu>
-    <MudNavLink Href="/" Match="NavLinkMatch.All">Dashboard</MudNavLink>
-    <MudNavLink Href="/servers" Match="NavLinkMatch.Prefix">Servers</MudNavLink>
-    <MudNavGroup Title="Settings" Expanded="true">
-        <MudNavLink Href="/users" Match="NavLinkMatch.Prefix">Users</MudNavLink>
-        <MudNavLink Href="/security" Match="NavLinkMatch.Prefix">Security</MudNavLink>
-    </MudNavGroup>
-    <MudNavLink Href="/about" Match="NavLinkMatch.Prefix">About</MudNavLink>
+    <div class="nav-item logo-container">
+        <MudImage Src="images/VendePuesLogo_transparent.png" alt="Logo" class="logo" />
+    </div>
+    <br />
+    <MudNavLink Href="/" Match="NavLinkMatch.All" Icon="@Icons.Material.Rounded.Home">Inicio</MudNavLink>
+    <MudNavLink Href="/about" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Info">Acerca de</MudNavLink>
+
+   
+            <MudNavLink Href="/banks" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.AccountBalance">Bancos</MudNavLink>
+            <MudNavLink Href="/categories" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Category">Categorias</MudNavLink>
+            <MudNavLink Href="/purchases" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.ShoppingBag">Compras</MudNavLink>
+            <MudNavLink Href="/inventories" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Rule">Inventarios</MudNavLink>
+            <MudNavLink Href="/news" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Newspaper">Noticias & Promociones</MudNavLink>
+             <MudNavLink Href="/countries" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Public">Country</MudNavLink>
+            <MudNavLink Href="/orders" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.AttachMoney">Pedidos</MudNavLink>
+            <MudNavLink Href="/products" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Inventory2">Productos</MudNavLink>
+            <MudNavLink Href="/suppliers" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.LocalShipping">Proveedores</MudNavLink>
+            <MudNavLink Href="/users" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Group">Usuarios</MudNavLink>
+            <MudNavGroup Title="Reportes" Icon="@Icons.Material.Filled.Summarize">
+                <MudNavLink Href="/report_InventoryAdjustment" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.AttachMoney">Ajustes de inventario</MudNavLink>
+                <MudNavLink Href="/report_InventoryValuation" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.AttachMoney">Valorización del inventario</MudNavLink>
+                <MudNavLink Href="/report_GrossProfit" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.AttachMoney">Utilidad bruta</MudNavLink>
+            </MudNavGroup>
+       
 </MudNavMenu>
