--- a/OrderPlus/OrderPlus.Fronend/Pages/Countries/CountriesIndex.razor
+++ b/OrderPlus/OrderPlus.Fronend/Pages/Countries/CountriesIndex.razor
@@ -1,21 +1,53 @@
 ﻿@page "/countries"
 
 @if(loading)
-{
-    ﻿<MudCard>
-        <div class="overlay d-flex flex-column justify-content-center align-items-center p-3">
-            <MudProgressCircular Indeterminate="true" Color="Color.Primary" Class="mb-3" />
-            <MudText Typo="Typo.h5">Please wait...</MudText>
-        </div>
-    </MudCard>
+{    
+    <Loading/>
 }
-<MudTable Items="@countries"
-          @ref="table"
-          ServerData="@(new Func<TableState, Task<TableData<Country>>>(LoadListAsync))"
-          Dense=true
-          Hover=true
-          Striped=true
-          FixedHeader=true
-          FixedFooter=true>
+else
+{
+    <MudTable Items="@countries"
+              @ref="table"
+              ServerData="@(new Func<TableState, Task<TableData<Country>>>(LoadListAsync))"
+              Dense=true
+              Hover=true
+              Striped=true
+              FixedHeader=true
+              FixedFooter=true>
 
-          </MudTable>
+        <ToolBarContent>
+            <div class="d-flex justify-content-between">
+                <MudText Typo="Typo.h6" Class="me-4"><i class="bi bi-globe-americas"></i> Countries</MudText>
+                <MudButton Variant="Variant.Outlined" EndIcon="@Icons.Material.Filled.Add" Color="Color.Info" OnClick="@(() => ShowModalAsync())">Add Country</MudButton>
+            </div>
+            <MudSpacer />
+            <FilterComponent ApplyFilter="SetFilterValue" />
+        </ToolBarContent>
+        <HeaderContent>
+            <MudTh>Pais</MudTh>
+            <MudTh style="width: 100px;">state</MudTh>
+            <MudTh style="width: 270px;">Actions</MudTh>
+        </HeaderContent>
+        <RowTemplate>
+            <MudTd DataLabel="Country">@context.Name</MudTd>
+            <MudTd DataLabel="state">
+                <MudButton Variant="Variant.Filled" EndIcon="@Icons.Material.Filled.Map" Color="Color.Info" OnClick="@(() => StatesAction(@context))" style="width: 100px;">
+                    @context.StatesNumber
+                </MudButton>
+            </MudTd>
+            <MudTd DataLabel="Actions">
+                <MudButton Variant="Variant.Outlined" EndIcon="@Icons.Material.Filled.Edit" Color="Color.Warning" OnClick="@(() => ShowModalAsync(context.Id, true))">Edit</MudButton>
+                <MudButton Variant="Variant.Outlined" EndIcon="@Icons.Material.Filled.Delete" Color="Color.Error" OnClick=@(() => DeleteAsync(@context))>Delete</MudButton>
+            </MudTd>
+        </RowTemplate>
+        <NoRecordsContent>
+            <MudText>No se encontraron registros.</MudText>
+        </NoRecordsContent>
+        <PagerContent>
+            <MudTablePager RowsPerPageString="Numero de Registros:"
+                           PageSizeOptions="pageSizeOptions"
+                           AllItemsText="Todos"
+                           InfoFormat="@infoFormat" />
+        </PagerContent>
+    </MudTable>
+}
